--- a/api/package.json
+++ b/api/package.json
@@ -16,7 +16,8 @@
     "github": "^12.0.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
-    "serve-favicon": "~2.4.5"
+    "serve-favicon": "~2.4.5",
+    "slack": "^9.0.9"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
