--- a/ui/package.json
+++ b/ui/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.17.1",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
+    "react-highlight-words": "^0.10.0",
     "react-scripts": "1.0.17"
   },
   "scripts": {
