--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
     "bcrypt-nodejs": "^0.0.3",
     "bluebird": "^3.5.1",
     "body-parser": "~1.18.2",
+    "connect-mongo": "^2.0.0",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
     "debug": "~2.6.9",
