--- a/api/package.json
+++ b/api/package.json
@@ -14,14 +14,17 @@
     "connect-mongo": "^2.0.0",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
+    "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "express": "~4.15.5",
     "express-session": "^1.15.6",
     "github": "^12.0.3",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.1.0",
     "mongoose": "^4.13.4",
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
+    "passport-jwt": "^3.0.1",
     "passport-local": "^1.0.0",
     "serve-favicon": "~2.4.5",
     "slack": "^9.0.9"
