--- a/api/package.json
+++ b/api/package.json
@@ -8,13 +8,12 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
-    "bcrypt-nodejs": "^0.0.3",
+    "bcryptjs": "^2.4.3",
     "bluebird": "^3.5.1",
     "body-parser": "~1.18.2",
     "connect-mongo": "^2.0.0",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
-    "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "express": "~4.15.5",
     "express-session": "^1.15.6",
