--- a/api/package.json
+++ b/api/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^4.13.4",
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
+    "passport-github": "^1.1.0",
     "passport-jwt": "^3.0.1",
     "passport-local": "^1.0.0",
     "serve-favicon": "~2.4.5",
