--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,7 @@
     "github": "^12.0.3",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.1.0",
+    "lodash": "^4.17.4",
     "mongoose": "^4.13.4",
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
