--- a/api/package.json
+++ b/api/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "node ./app.js",
     "dev-server": "PORT=$API_PORT nodemon  ./app.js localhost"
   },
   "dependencies": {
