add deploy scripts and add cloudfront to cors

--- a/ui/package.json
+++ b/ui/package.json
@@ -11,12 +11,14 @@
     "react-scripts": "1.0.17",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "s3": "^4.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "REACT_APP_API_URL='https://searchninja.herokuapp.com/' yarn build && node scripts/deploy"
   }
 }
